cmake_minimum_required(VERSION 3.24)
project(advent-of-code)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled 2022/1/day1.cpp 2022/2/day2.cpp main.cpp 2022/2/day2.h 2022/1/day1.h 2022/3/day3.cpp 2022/3/day3.h 2022/4/day4.cpp 2022/4/day4.h 2022/5/day5.cpp 2022/5/day5.h 2022/6/day6.cpp 2022/6/day6.h 2022/7/day7.cpp 2022/7/day7.h 2022/8/day8.cpp 2022/8/day8.h
        2022/9/day9.cpp 2022/9/day9.h 2022/10/day10.cpp 2022/10/day10.h 2022/11/monkeys.cpp 2022/11/monkeys.h 2022/12/hill.cpp 2022/12/hill.h 2023/1/calibration.h 2023/1/calibration.cpp 2023/readData.h 2023/readData.cpp)
